[metadata]
name = unwatermark-musicnotes
version = file: VERSION
description = A Musicnotes PDF watermark remover
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasyip/unwatermark-musicnotes
author = Jason Yip
author_email = jasonyip1234567@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
python_requires = >=3
packages = find:
install_requires =
    pymupdf

[options.entry_points]
console_scripts =
    musicnotesrm = musicnotes_rm:_main
